# cronishe

./: .dockerignore  .gitignore  Dockerfile  MANAGER.md  README.md  claude.md  database.py  docker-compose.yml  entrypoint.sh  example_job.py  manage_jobs.py  manager.py  pyproject.toml  scheduler.py  webui.py
.claude/: settings.local.json
templates/: add_job.tpl  edit_job.tpl  index.tpl  job_runs.tpl  manager_index.tpl  run_logs.tpl
